# sample_package

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
src/imppkg/: harmonic_mean.c  harmonic_mean.py  harmony.py
