[metadata]
name=my-sample-package
version=0.0.1
url=https://github.com/owari-taro/sample_package.git
author=owari taro
author_email=dummy@mail.com
description=This is my first sample package!!!
long_description=file: README.md
long_description_content_type=text/markdown
license=MIT
license_files=LICENSE
classifiers=
    LICENSE :: OSI Approved :: MIT License
