[metadata]
name=my-sample-package
version=0.0.1
url=https://github.com/owari-taro/sample_package.git
author=owari taro
author_email=dummy@mail.com
description=This is my first sample package!!!
long_description=file: README.md
long_description_content_type=text/markdown
license=MIT
license_files=LICENSE
classifiers=
    LICENSE :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    termcolor>=1.1.0,<2

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    harmony = imppkg.harmony:main


[tool:pytest]
testpaths = test
#addopts = --cov --strict-markers
#xfail_strict = True
[coverage:run]
branch=True
[coverage:report]
show_missing=True
skip_covered=True

[tox:tox]
envlist=py311,py310
[testenv]
deps= 
    pytest
    pytest-cov

[testenv:get_my_ip]
deps=
    requests
commands=
    python -c "import requests;print(requests.get('https://canhazip.com').text)"
